# rust-httpc-test

./: .gitignore  Cargo.toml  README.md
examples/: quick_dev.rs
src/: client.rs  cookie.rs  error.rs  lib.rs  response.rs
tests/: test_base.rs
