[package]
name = "httpc-test"
version = "0.1.9-WIP"
edition = "2021"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Minimalistic HTTP Client Test Utilities"
categories = ["development-tools::testing", "network-programming", "web-programming::http-client" ]
keywords = [
	"test",
	"http-client"
]
homepage = "https://github.com/jeremychone/rust-httpc-test"
repository = "https://github.com/jeremychone/rust-httpc-test"

[features]
color-output = ["url", "colored_json", "colored"]

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1"
reqwest = {version = "0.11", features = ["cookies", "json"]}
reqwest_cookie_store = "0.6"
# Note: It seems request_cookie_store doe snot support cookie 0.18
#       So, sticking with 0.17 for now. 
cookie = "0.17" 
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.colored]
version = "2.0.0"
optional = true

[dependencies.url]
version = "2.4.0"
optional = true

[dependencies.colored_json]
version = "4.1"
optional = true

[dev-dependencies]
anyhow = "1"
