[package]
name = "httpc-test"
version = "0.1.10"
edition = "2021"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Minimalistic HTTP Client Test Utilities"
categories = ["development-tools::testing", "network-programming", "web-programming::http-client" ]
keywords = [
	"test",
	"http-client"
]
homepage = "https://github.com/jeremychone/rust-httpc-test"
repository = "https://github.com/jeremychone/rust-httpc-test"

[features]
color-output = ["url", "colored_json", "colored"]

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1"
reqwest = {version = "0.12", features = ["cookies", "json"]}
reqwest_cookie_store = "0.8"
cookie = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.colored]
version = "2.1.0"
optional = true

[dependencies.url]
version = "2"
optional = true

[dependencies.colored_json]
version = "5"
optional = true

[dev-dependencies]
anyhow = "1"
